--- a/ItDepends.WinForms/ItDepents.WinForms/ItDepents.WinForms.csproj
+++ b/ItDepends.WinForms/ItDepents.WinForms/ItDepents.WinForms.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
